[package]
name = "move-to-ts"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
thiserror = "1.0.38"
clap = { version = "3.2.21", features = ["derive"] }

move-core-types = { git = "https://github.com/move-language/move", rev = "main" }
move-compiler = { git = "https://github.com/move-language/move", rev = "main" }
move-ir-types = { git = "https://github.com/move-language/move", rev = "main" }
move-package = { git = "https://github.com/move-language/move", rev = "main" }
move-command-line-common = { git = "https://github.com/move-language/move", rev = "main" }

[features]
default = ["move-core-types/address32"]
